fixed left-aligning for real

--- a/lights/static/lights/style.css
+++ b/lights/static/lights/style.css
@@ -26,7 +26,7 @@ input {
     display: flex;
     width: 90%;
     flex-flow: row wrap;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: flex-start;
     align-content: flex-start;
 
